--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve -o",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "red":"json-server --watch db.json"
   },
   "private": true,
   "dependencies": {
@@ -26,7 +27,9 @@
     "@ngrx/store-devtools": "^12.5.1",
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/typography": "^0.4.1",
+    "chart.js": "^3.9.1",
     "moment": "^2.29.1",
+    "ng2-charts": "^3.1.2",
     "ngx-pagination": "^6.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
